--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,8 @@ header{
 #check {
     display: none;
 }
+
+
 /* アコーディオンメニュー */
 .global{
     width: 70px;
@@ -67,6 +69,8 @@ header{
     opacity: 0;
     transition: 0.5s; /* 開閉スピードの設定 */
     font-size: 15px;
+    padding-left: 0;
+    text-decoration: none;
 }
 .global input:checked ~ ul{
     height: auto;
@@ -76,7 +80,7 @@ header{
     width: 20%;
     right: 0px;
     position: fixed;
-    margin-top: 37px;
+    margin-top: 32px;
     font-size: 20px;
     text-align: center;
     align-items: center;
@@ -84,35 +88,45 @@ header{
     overflow: visible;
 }
 .global li {
-    height: 55px;
-    padding-top: 35px;
+    height: 75px;
+    padding-top: 25px;
     border: solid 1px #00297e;
+
 }
 .global input:checked ~ label {
     background-color: transparent; /* クリック後のラベルの背景色 */
 }
-.global nav-menu{
+.global nav-menu {
     font-size: 25px; /* 開いた部分の文字サイズ */
     width: 0px;
     font-style: none;
-}
-.global nav-menu {
-    font-style: none;
     transition-delay: 1s;
 }
+.nav-menu a:hover {
+    color: #848484;
+}
+
+
+
 /* メニュー */
 .prof-a {
-   background-color: #00297e;
+   background-color: hsl(220, 100%, 25%);
+   color: #fff;
+}
+.prof-a a:hover{
+    color: #fff;
 }
 .prof-w {
     color: #fff;
 }
 .home-a {
-    color: #000;
+    color: #848484;
 }
 .logout-a {
-    color: #000;
+    color: #848484;
 }
+
+
 /* ログインユーザーアイコン */
 .user-img {
     max-width: 50px;
@@ -255,9 +269,6 @@ textarea::placeholder {
 .trash-btn {
     height: 45px;
 }
-.content{
-
-}
 .modal{
     display: none;
     height: 100vh;
@@ -283,6 +294,8 @@ textarea::placeholder {
 .trash-img {
     height: 35px;
 }
+
+
 /*ユーザー検索フォーム*/
 .search-form {
     height: 150px;
@@ -295,6 +308,8 @@ textarea::placeholder {
     height: 50px;
     width: 50px;
 }
+
+
 /*ユーザー一覧エリア*/
 .user-area {
     display: inline-block;
@@ -334,13 +349,103 @@ textarea::placeholder {
     width: 30%;
     text-align: center;
 }
-.follow-list {
-    justify-content: center;
-}
 .follow-icon-list {
     display: flex;
     width: 70%;
 }
 .followicon {
     padding-right: 7px;
+}
+
+
+/*other.blade.php*/
+.item-title {
+    display: flex;
+    flex-flow: column;
+    width: 15%;
+    margin-left: 10px;
+    font-size: 17px;
+    line-height: 35px;
+}
+.item-content {
+    width: 40%;
+    font-size: 17px;
+    line-height: 35px;
+}
+.otherplof-follow-btn {
+    margin: auto 15px 25px auto;
+}
+.other-postarea {
+    width: 100%;
+}
+.other-postspace {
+    display: flex;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 15px;
+    border-bottom: solid 0.25px #333333;
+}
+.other-icon {
+    width: 15%;
+    text-align: right;
+    padding-right: 10px;
+}
+.other-username-and-post{
+    width: 70%;
+    padding-left: 15px;
+}
+.other-posttime {
+    width: 15%;
+    font-size: 10px;
+}
+.other-username {
+    font-size: 15px;
+}
+.other-post {
+    font-size: 12px;
+}
+
+
+/*profile.blade.php*/
+.profile-area {
+    display: flex;
+    width: 100%;
+    margin-top: 30px;
+    padding-top: 30px;
+}
+.prof-user-icon {
+    width: 20%;
+    text-align: right;
+    margin-top: 30px;
+    padding-right: 30px;
+}
+.profile-content-title {
+    width: 20%;
+}
+.profile-content-title label {
+    margin-top: 30px;
+    height: 30px;
+}
+.profile-form {
+    width: 45%;
+}
+.profile-form input {
+    width: 100%;
+    margin-top: 30px;
+    height: 30px;
+    border: 0.25px solid #8e8e8e;
+    background-color: #efefef;
+}
+input[type='file'] {
+   
+}
+#file-image {
+    width: 100%;
+    margin-top: 30px;
+    border: 0.25px solid #8e8e8e;
+    height: 100px;
+    background-color: #efefef;
+    color: #ACACAC;
+    text-align: center;
+    font-size: 20px;
 }
