--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,39 +91,27 @@ header{
     height: 75px;
     padding-top: 25px;
     border: solid 1px #00297e;
-
 }
-.global input:checked ~ label {
-    background-color: transparent; /* クリック後のラベルの背景色 */
-}
-.global nav-menu {
+.nav-menu {
     font-size: 25px; /* 開いた部分の文字サイズ */
     width: 0px;
     font-style: none;
     transition-delay: 1s;
-}
-.nav-menu a:hover {
     color: #848484;
 }
+
 
 
 
 /* メニュー */
-.prof-a {
-   background-color: hsl(220, 100%, 25%);
-   color: #fff;
-}
-.prof-a a:hover{
-    color: #fff;
-}
-.prof-w {
-    color: #fff;
-}
-.home-a {
+.menu {
     color: #848484;
 }
-.logout-a {
-    color: #848484;
+li.menu:hover {
+    background-color: #00297E;
+}
+a.menu:hover {
+    color: #fff;
 }
 
 
@@ -414,7 +402,7 @@ textarea::placeholder {
     padding-top: 30px;
 }
 .prof-user-icon {
-    width: 20%;
+    width: 30%;
     text-align: right;
     margin-top: 30px;
     padding-right: 30px;
@@ -427,7 +415,7 @@ textarea::placeholder {
     height: 30px;
 }
 .profile-form {
-    width: 45%;
+    width: 40%;
 }
 .profile-form input {
     width: 100%;
@@ -436,10 +424,10 @@ textarea::placeholder {
     border: 0.25px solid #8e8e8e;
     background-color: #efefef;
 }
-input[type='file'] {
-   
-}
 #file-image {
+    display: none;
+}
+.file-select-button {
     width: 100%;
     margin-top: 30px;
     border: 0.25px solid #8e8e8e;
@@ -447,5 +435,10 @@ input[type='file'] {
     background-color: #efefef;
     color: #ACACAC;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
+    padding-top: 5px;
+}
+.update-btn {
+    width: 150px;
+    margin: 15px auto 20px auto;
 }
