--- a/public/css/logout.css
+++ b/public/css/logout.css
@@ -5,6 +5,82 @@ html{
 }
 
 body{
+    max-height: 100%;
+    background: linear-gradient(#187AD6 ,#55ADFB,#FCE231);
+    position: relative;
+}
+#container {
+    display: flex;
+    align-items: center;
     height: 100%;
-    background: #186AC9;
+    justify-content: center;
+    margin-top: 100px;
+    color: #fff;
+}
+.login-full {
+    width: 30em;
+}
+.login-title {
+    text-align: center;
+}
+.atlas-img {
+    height: 30%;
+    width: 30%;
+}
+.s-title {
+    color: #fff;
+    font-size: 25px;
+    font-weight: 300;
+}
+.login-content {
+    background-color: rgba(0,0,0,0.2);
+    border-radius: .6rem;
+    height: 280px;
+    width: 240px;
+    margin: 35px auto;
+    font-weight: 200;
+}
+.welcome-msg {
+    font-size: 15px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+.login-form {
+    display: flex;
+    flex-flow: column;
+    width: 85%;
+    height: 180px;
+    margin: 0 auto;
+
+}
+.login-form label {
+    font-size: 10px;
+    text-align: left;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 2px;
+}
+.login-input {
+    border: solid 0.1px #454545;
+    border-radius: .3rem;
+    height: 25px;
+    margin-bottom: 10px;
+}
+.update-btn{
+    text-align: right;
+    font-weight: 100;
+}
+.btn {
+    width: 100px;
+    height: 25px;
+    background-color: #ED3B50;
+    color: #fff;
+    border-radius: .3rem;
+    border: solid 0.1px #ED3B50;
+    font-size: 15px;
+    margin-top: 10px;
+}
+.new-user {
+    font-style: none;
+    color: #fff;
 }
