--- a/public/css/logout.css
+++ b/public/css/logout.css
@@ -1,13 +1,14 @@
 @charset "UTF-8";
 
 html{
-    height: 100%;
+
 }
 
 body{
-    max-height: 100%;
+    max-height: 150%;
     background: linear-gradient(#187AD6 ,#55ADFB,#FCE231);
-    position: relative;
+    background-attachment: fixed;
+
 }
 #container {
     display: flex;
@@ -15,6 +16,7 @@ body{
     height: 100%;
     justify-content: center;
     margin-top: 100px;
+    margin-bottom: 100px;
     color: #fff;
 }
 .login-full {
@@ -24,24 +26,23 @@ body{
     text-align: center;
 }
 .atlas-img {
-    height: 30%;
-    width: 30%;
+    height: 35%;
+    width: 35%;
 }
 .s-title {
     color: #fff;
-    font-size: 25px;
+    font-size: 35px;
     font-weight: 300;
 }
 .login-content {
     background-color: rgba(0,0,0,0.2);
     border-radius: .6rem;
-    height: 280px;
-    width: 240px;
-    margin: 35px auto;
-    font-weight: 200;
+    width: 330px;
+    margin: 55px auto;
+    font-weight: 300;
 }
 .welcome-msg {
-    font-size: 15px;
+    font-size: 20px;
     padding-top: 30px;
     padding-bottom: 20px;
 }
@@ -49,12 +50,11 @@ body{
     display: flex;
     flex-flow: column;
     width: 85%;
-    height: 180px;
     margin: 0 auto;
-
+    margin-bottom: 30px;
 }
 .login-form label {
-    font-size: 10px;
+    font-size: 12px;
     text-align: left;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -62,25 +62,99 @@ body{
 }
 .login-input {
     border: solid 0.1px #454545;
-    border-radius: .3rem;
-    height: 25px;
+    border-radius: .5rem;
+    height: 40px;
     margin-bottom: 10px;
+    font-size: 20px;
 }
 .update-btn{
     text-align: right;
     font-weight: 100;
+    font-size: 35px;
 }
 .btn {
-    width: 100px;
-    height: 25px;
+    width: 130px;
+    height: 40px;
     background-color: #ED3B50;
     color: #fff;
-    border-radius: .3rem;
+    border-radius: .5rem;
     border: solid 0.1px #ED3B50;
-    font-size: 15px;
+    font-size: 22px;
     margin-top: 10px;
+    font-weight: 100;
 }
 .new-user {
     font-style: none;
     color: #fff;
+    font-size: 20px;
+    padding-bottom: 30px;
+}
+.turn-back {
+    padding-bottom: 30px;
+}
+.register-link {
+    margin-top: 65px;
+    padding-bottom: 30px;
+}
+
+/*register.blade.php*/
+.register-content {
+    width: 350px;
+    background-color: rgba(0,0,0,0.2);
+    border-radius: .6rem;
+    margin: 35px auto;
+    font-weight: 300;
+}
+.register-form {
+    display: flex;
+    flex-flow: column;
+    width: 85%;
+    margin: 0 auto 30px;
+}
+.register-form label {
+    font-size: 12px;
+    text-align: left;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 2px;
+}
+.register-input {
+    border: solid 0.1px #454545;
+    border-radius: .5rem;
+    height: 45px;
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+.alert-dange {
+    color: #fff;
+    background-color: #ff001e;
+    font-size: 15px;
+}
+
+/*added.blade.php*/
+.added-content {
+    width: 350px;
+    background-color: rgba(0,0,0,0.2);
+    border-radius: .6rem;
+    margin: 35px auto;
+    font-weight: 300;
+}
+.go-msg {
+    font-size: 20px;
+    margin-bottom: 20px;
+    font-weight: 200;
+    line-height: 35px;
+}
+.turn-back-login {
+    padding-top: 20px;
+    padding-bottom: 50px;
+}
+.welcome-msg {
+    font-weight: 500;
+    line-height: 35px;
+}
+.new-user-login {
+    padding: 10px 5px 10px 5px;
+    font-size: 18px;
+    font-weight: 200;
 }
